#54 ... corrected a layout issue with the demo page (centering vidyard videos).

--- a/docs/_sass/_includes/_content.scss
+++ b/docs/_sass/_includes/_content.scss
@@ -338,9 +338,3 @@
 		height: 100%;
 	}
 }
-
-.vidyard-container {
-    width: 640px;
-    margin: 0 auto;
-    padding: 20px 0 20px
-}
