--- a/docs/_sass/_includes/_header.scss
+++ b/docs/_sass/_includes/_header.scss
@@ -371,3 +371,9 @@
 		left: 60px;
 	}
 }
+
+.vidyard-container {
+  width: 640px;
+  margin: 0 auto;
+  padding: 20px 0 20px
+}
